# gigachad-bot

./: .gitignore  .gitmodules  AGENTS.md  PRODUCT.md  README.md  docker-compose.morphic.yml  docker-compose.vane.yml  pyproject.toml  run.sh  searxng-settings.yml  vane-deepseek-shim.py
.github/: dependabot.yml
.streamlit/: config.toml
.technical-docs/: vane-setup.md
prompts/: _order  advisor.md  article.md  concept-in-depth.md  conceptual-overview.md  empty.md  feynman.md  quick-overview.md  tutor.md
prompts/_blocks/: didactics.md  format-emoji.md  format-general.md  response-behavior.md  wiki-style.md
src/: codebase_tokenizer.py  config.py  llm_client.py  llm_config.py  main.py  openai_client.py
src/backend/: install_deps.py  server.py
src/backend/routes/: chat.py  config.py  deps.py  documents.py  file_vaults.py  files.py  fileviewer.py  histories.py  memory.py  mineru.py  models.py  morphic.py  obsidian.py  ocr.py  projects.py  research.py  search.py  study.py
src/dockersandbox/: config.py  dockerimage-bakery.py  sandbox.py  setup-agent-sandbox.sh
src/dockersandbox/dockerfiles/: Dockerfile.base  Dockerfile.sandbox-aider  Dockerfile.sandbox-claude  Dockerfile.sandbox-codex  Dockerfile.sandbox-cursor  Dockerfile.sandbox-gemini  Dockerfile.sandbox-opencode  Dockerfile.sandbox-qwen
src/frontend/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/components/: AttachmentPreview.tsx  AttachmentSidebar.tsx  CanvasEditor.tsx  CanvasWorkspace.tsx  ChatBranchItem.tsx  ChatContainer.tsx  ChatHistoryManager.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  CommandMenu.tsx  ConsoleEditor.tsx  ContextSidebar.tsx  CreateDocumentPanel.tsx  DocumentEditor.tsx  DocumentPicker.tsx  DrawingCanvas.tsx  EditorSidebar.tsx  ElevatedContainer.tsx  ExpandableSidebarElement.tsx  FileViewer.tsx  FloatingWindow.tsx  HistoryTree.tsx  LLMParams.tsx  LaTeXMarkdown.tsx  MarkdownRenderer.tsx  MemoryBoard.tsx  MemoryDiffWindow.tsx  MemoryPanel.tsx  MemoryViewer.tsx  MessageAttachments.tsx  MindmapModal.tsx  ModelDropdown.tsx  ModelSelector.tsx  MoreOptionsMenu.tsx  MorphicSearchResult.tsx  OCRPanel.tsx  ObsidianPicker.tsx  ParamSlider.tsx  PdfViewer.tsx  (+20 more)
src/frontend/components/__tests__/: ChatContainer.test.tsx
src/frontend/contexts/: BranchContext.tsx  MemoryViewerContext.tsx  ProjectContext.tsx  SettingsContext.tsx  SidebarContext.tsx
src/frontend/hooks/: useBranches.ts  useChat.ts  useChatModals.ts  useChatStream.ts  useClickOutside.ts  useCommandBar.ts  useDropZone.ts  useHistory.ts  useMemoryCategories.ts  useModeState.ts  useModeState.tsx  useMorphicSearch.ts  useProjectDocuments.ts  useResearch.ts  useSafeAction.ts  useStudyHandler.ts  useVaultPicker.ts  useVaultTree.ts
src/frontend/hooks/__tests__/: useChatModals.test.ts  useProjectDocuments.test.ts  useVaultPicker.test.ts
src/frontend/lib/: api.ts  attachments.ts  config.ts  diff.ts  drawing.ts  extract-thought.ts  fuzzy.ts  markdown-syntax-highlighting.ts  memoryUtils.ts  models.ts  morphic.ts  motion.tsx  palette.ts  pathTree.ts  sidebarConfig.ts  sse.ts  streamdown-code.ts  streamdown-mermaid.ts  streaming.ts  types.ts  webSearch.ts
src/frontend/lib/__mocks__/: api.ts
src/frontend/lib/__tests__/: api.test.ts
src/legacy_streamlit/: main.py  streamlit_helper.py
src/legacy_streamlit/pages/: Deep_Research.py  Gigachad_Bot.py  OCR_Workspace.py
src/lib/: attachment_materialize.py  chat_store.py  document_library.py  extract_queue.py  file_vault.py  flashcards.py  image_paths.py  json_io.py  llm_json.py  memory_store.py  naming.py  non_user_prompts.py  obsidian_vault.py  project_store.py  prompt_store.py  prompts.py  research_config.py  research_trace.py  safe_path.py  streamlit_helper.py
src/lib/agents/: docker_sandbox.py  docker_sandbox_demo.py  sandbox.py  tools.py
src/lib/prompts/: __init__.py  internal.py  memory.py  non_user_prompts.py  user.py
src/pages/: Code_Agent.py  DataFrame_Bot.py  Deep_Research.py  Gigachad_Bot.py  Markdown_Preprocessor.py  Markdown_Processor.py  OCR_Workspace.py  PDF_Preprocessor.py  PDF_Workspace.py  RAG_Workspace.py  VLM_Markdown_Miner.py
src/static/: pdf-minerU.sh
tests/: conftest.py  test_attachment_materialize.py  test_extract_queue.py  test_file_vaults_attach.py
