[project]
name = "gigachad-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "google-genai>=2.8.0",
    "gpt-researcher>=0.15.1",
    "langchain-litellm>=0.6.6",
    "langchain-ollama>=1.1.0",
    "litellm>=1.89.0",
    "llm-baseclient @ git+https://github.com/patrickab/llm-baseclient.git@main",
    "mineru[all]>=3.2.3",
    "nodeenv>=1.10.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
gigachad-install = "src.backend.install_deps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 135

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "TCH", # type-checking hygiene
  "SIM", # simplify
  "ANN", # type hints
  "ARG", # unused arguments
  "RUF"  # Ruff-native rules
]
ignore = [
  "TCH001",
  "TCH002",
  "RUF100",
  "B904"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["openai_client"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Enables Ruff formatter with default options (Black-compatible)
[tool.ruff.format]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
