[project]
name = "gigachad-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "gpt-researcher>=0.15.1",
    "langchain-litellm>=0.7.0",
    "litellm>=1.91.1",
    "llm-baseclient @ git+https://github.com/patrickab/llm-baseclient.git@main",
    "mineru[all]>=3.4.3",
    "nodeenv>=1.10.0",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
gigachad-install = "src.backend.install_deps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
respect-gitignore = true
line-length = 135

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "TCH", # type-checking hygiene
  "SIM", # simplify
  "ANN", # type hints
  "ARG", # unused arguments
  "RUF"  # Ruff-native rules
]
ignore = [
  "TCH001",
  "TCH002",
  "RUF100",
  "B904"
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["openai_client"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Test files relax annotation/unused-arg rules — pytest fixtures don't need
# full type hints and parametrized cases often intentionally leave args unused.
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG", "S101", "PLR2004"]

# Enables Ruff formatter with default options (Black-compatible)
[tool.ruff.format]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

